# spellchecker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py  schemas.py
data/: kk.txt
