[tool.poetry]
name = "spellchecker"
version = "0.1.0"
description = "symspell based spellchecker"
authors = ["truebeliever <madiyar2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.64.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
